package net.pogo.game.common;


/**
 * Created by blake on 20/05/17.
 */

public class Vector3 {

    public float [] data = new float[3];

    public Vector3(){}


    public Vector3(float x, float y, float z)
    {
        data[0] = x;
        data[1] = y;
        data[2] = z;
    }


}
