package net.pogo.game.engine;

public class RenderNode
{
  int LiveCycleStat = 0;
  public String name;
  public DisplayComponent display;
  public PositionComponent position;
  public ScaleComponent scale;
}
