package net.pogo.game.engine;

import net.pogo.game.common.Vector3;


public class VelocityComponent
{

  public Vector3 velocity = new Vector3();
}

